New added class for admin user and privilege

--- a/HealthKitService/HealthKitService.csproj
+++ b/HealthKitService/HealthKitService.csproj
@@ -171,7 +171,9 @@
       <DependentUpon>201510310606207_Initial4.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AdminUser.cs" />
     <Compile Include="Models\HealthKitServiceContext.cs" />
+    <Compile Include="Models\Privilege.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
